--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/developer-kimsky/card_maker/",
+  "homepage": "https://developer-kimsky.github.io/card_maker/",
   "name": "card_maker",
   "version": "0.1.0",
   "private": true,
